--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Ke's Homepage"
+title                    : "Zhenye's Homepage"
 title_separator          : "-"
-name                     : &name "Ke Wu"
+name                     : &name "Zhenye Luo"
 description              : &description "personal description"
 url                      : https://SobotHub.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
