--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "Luke-Luo1/lukeluo"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "KeWu4.png"
+  avatar           : "LukeLuo.jpg"
   name             : "Zhenye Luo"
   pronouns         : # example: "she/her"  
   bio              : "Focusing on the Mathematical Essence of Deformable Robotic Systems"
