--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Zhenye's Homepage"
 title_separator          : "-"
 name                     : &name "Zhenye Luo"
 description              : &description "personal description"
-url                      : https://luke-luo1.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://luke-luo1.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/lukeluo" # the subpath of your site, e.g. "/blog"
 repository               : "Luke-Luo1/lukeluo"
 
@@ -24,20 +24,20 @@ author:
   avatar           : "LukeLuo.jpg"
   name             : "Zhenye Luo"
   pronouns         : # example: "she/her"  
-  bio              : "Focusing on the Mathematical Essence of Deformable Robotic Systems"
-  location         : "UAE"
-  employer         : "MBZUAI"
+  bio              : "Focusing on AI and Robotics"
+  location         : "CHN"
+  employer         : "BNU"
   #uri              : # URL
-  email            : "kewuforwork@gmail.com" 
+  email            : "luozy2021@mail.bnu.edu.cn" 
 
   # Academic websites
   #arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=UOd1SfAAAAAJ&hl=en&oi=sra"
+  googlescholar    : "https://scholar.google.com.hk/citations?hl=zh-CN&user=wii6meYAAAAJ"
   #impactstory      : # URL
   #orcid            : "http://orcid.org/yourorcidurl"
   #semantic         : # URL
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : "https://www.researchgate.net/profile/Ke-Wu-29"
+  # researchgate     : "https://www.researchgate.net/profile/Ke-Wu-29"
 
   # Repositories and software development
   #bitbucket        : # Username - Update with your username on the site
