--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "LukeLuo.jpg"
   name             : "Zhenye Luo"
   pronouns         : # example: "she/her"  
-  bio              : "Focusing on AI and Robotics"
+  bio              : "Focusing on AIGC and Robotics"
   location         : "CHN"
   employer         : "BNU"
   #uri              : # URL
