--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,9 @@ main:
   - title: "CV"
     url: "https://sobothub.github.io/files/CV_KeWforMBZUAI.pdf"
 
+  - title: "中文版简历"
+    url: "https://sobothub.github.io/files/CV_KeWforMBZUAI.pdf"
+
  # - title: "Talks"
  #   url: /talks/    
 
