--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url:  /Education/
 
   - title: "Publications"
-    url: "https://scholar.google.com/citations?user=UOd1SfAAAAAJ&hl=en&oi=sra"
+    url: "https://scholar.google.com.hk/citations?hl=zh-CN&user=wii6meYAAAAJ"
 
   - title: "CV"
     url: "https://github.com/Luke-Luo1/lukeluo/blob/master/files/CV-lukeluo.pdf"
