--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
 
-  - title: "Education"
-    url:  /Education/
+  # - title: "Education"
+  #   url:  /Education/
 
   - title: "Publications"
     url: "https://scholar.google.com.hk/citations?hl=zh-CN&user=wii6meYAAAAJ"
